--- a/index.html
+++ b/index.html
@@ -377,6 +377,157 @@
                                <p class="text-center font-semibold"><span class="text-teal-300">Impact Snapshot:</span> Improve forecast accuracy by <span class="text-white">40%</span> and boost team productivity by <span class="text-white">25%</span> through automated insights.</p>
                             </div>
                         </div>
+
+                        <!-- Service 5: Restaurant Automation -->
+                        <div class="comparison-card reveal">
+                            <div class="p-8">
+                                <h3 class="text-2xl font-bold text-white mb-6">Restaurant Automation</h3>
+                                <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+                                    <div class="traditional-practice">
+                                        <h4 class="text-red-400">Traditional Practice</h4>
+                                        <ul>
+                                            <li>Manual order taking leads to errors and delays.</li>
+                                            <li>Fixed pricing leads to food waste and lost revenue.</li>
+                                            <li>Poor service experiences go unnoticed until a bad review.</li>
+                                            <li>Generic menus that don't adapt to customer preferences.</li>
+                                        </ul>
+                                    </div>
+                                    <div class="ai-solution">
+                                        <h4 class="text-teal-300">neural AI Solution</h4>
+                                        <ul>
+                                            <li>AI-enabled ordering via QR, voice, or digital menus.</li>
+                                            <li>Dynamic pricing to maximize margins and reduce waste.</li>
+                                            <li>Experience Monitor detects long waits or poor service.</li>
+                                            <li>AI Chef recommends dishes based on time, weather, or taste.</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                             <div class="bg-zinc-900 p-6">
+                               <p class="text-center font-semibold"><span class="text-teal-300">Impact Snapshot:</span> Increase average order value by <span class="text-white">15%</span> and reduce food waste by up to <span class="text-white">30%</span>.</p>
+                            </div>
+                        </div>
+
+                        <!-- Service 6: Marketing Automation -->
+                        <div class="comparison-card reveal">
+                            <div class="p-8">
+                                <h3 class="text-2xl font-bold text-white mb-6">Marketing Automation</h3>
+                                <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+                                    <div class="traditional-practice">
+                                        <h4 class="text-red-400">Traditional Practice</h4>
+                                        <ul>
+                                            <li>Generic, one-size-fits-all email blasts.</li>
+                                            <li>Manual A/B testing is slow and often inconclusive.</li>
+                                            <li>Reactive campaigns based on past performance.</li>
+                                            <li>High cost per lead with low conversion rates.</li>
+                                        </ul>
+                                    </div>
+                                    <div class="ai-solution">
+                                        <h4 class="text-teal-300">neural AI Solution</h4>
+                                        <ul>
+                                            <li>Hyper-personalized content and ad copy for each user.</li>
+                                            <li>Campaign Autopilot adjusts budget and targeting in real-time.</li>
+                                            <li>Predictive churn analysis to retain customers proactively.</li>
+                                            <li>Maximizes ROI with intelligent lead scoring.</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="bg-zinc-900 p-6">
+                               <p class="text-center font-semibold"><span class="text-teal-300">Impact Snapshot:</span> Up to <span class="text-white">30%</span> increase in marketing campaign conversion rates and a <span class="text-white">25%</span> reduction in customer churn.</p>
+                            </div>
+                        </div>
+
+                         <!-- Service 7: Real Estate AI Suite -->
+                        <div class="comparison-card reveal">
+                            <div class="p-8">
+                                <h3 class="text-2xl font-bold text-white mb-6">Real Estate AI Suite</h3>
+                                <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+                                    <div class="traditional-practice">
+                                        <h4 class="text-red-400">Traditional Practice</h4>
+                                        <ul>
+                                            <li>Agents spend hours answering repetitive inquiries.</li>
+                                            <li>Leads are qualified manually, wasting valuable time.</li>
+                                            <li>Property matching is based on basic filters and intuition.</li>
+                                            <li>Pricing is based on historical data and guesswork.</li>
+                                        </ul>
+                                    </div>
+                                    <div class="ai-solution">
+                                        <h4 class="text-teal-300">neural AI Solution</h4>
+                                        <ul>
+                                            <li>24/7 AI agent handles inquiries and qualifies leads.</li>
+                                            <li>Automated lead scoring to prioritize high-value clients.</li>
+                                            <li>Property Matchmaker system using lifestyle and preferences.</li>
+                                            <li>Smart Pricing Advisor using real-time market data.</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                             <div class="bg-zinc-900 p-6">
+                               <p class="text-center font-semibold"><span class="text-teal-300">Impact Snapshot:</span> Increase agent productivity by <span class="text-white">50%</span> and improve lead conversion rates by <span class="text-white">30%</span>.</p>
+                            </div>
+                        </div>
+
+                         <!-- Service 8: Full Stack Development -->
+                        <div class="comparison-card reveal">
+                            <div class="p-8">
+                                <h3 class="text-2xl font-bold text-white mb-6">AI-Native Full Stack Development</h3>
+                                <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+                                    <div class="traditional-practice">
+                                        <h4 class="text-red-400">Traditional Practice</h4>
+                                        <ul>
+                                            <li>Static websites with fixed layouts and CTAs.</li>
+                                            <li>Development cycles are long and resistant to change.</li>
+                                            <li>AI and automation are afterthoughts or costly add-ons.</li>
+                                            <li>Legacy stacks that are difficult to scale and maintain.</li>
+                                        </ul>
+                                    </div>
+                                    <div class="ai-solution">
+                                        <h4 class="text-teal-300">neural AI Solution</h4>
+                                        <ul>
+                                            <li>AI-first websites that self-optimize based on user behavior.</li>
+                                            <li>Embedded AI agents for chat, analytics, and automation.</li>
+                                            <li>Built on a scalable, AI-native stack (Supabase).</li>
+                                            <li>Future-proof architecture designed for integration.</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                             <div class="bg-zinc-900 p-6">
+                               <p class="text-center font-semibold"><span class="text-teal-300">Impact Snapshot:</span> Reduce time-to-market for new applications by <span class="text-white">40%</span> and increase user engagement with self-optimizing interfaces.</p>
+                            </div>
+                        </div>
+
+                        <!-- Service 9: AI Social Media Content Generation -->
+                        <div class="comparison-card reveal">
+                            <div class="p-8">
+                                <h3 class="text-2xl font-bold text-white mb-6">AI Social Media Content Generation</h3>
+                                <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+                                    <div class="traditional-practice">
+                                        <h4 class="text-red-400">Traditional Practice</h4>
+                                        <ul>
+                                            <li>Hiring expensive social media managers or copywriters.</li>
+                                            <li>Inconsistent tone of voice across posts.</li>
+                                            <li>Time-consuming content creation and writer's block.</li>
+                                            <li>Difficulty scaling content for multiple platforms.</li>
+                                        </ul>
+                                    </div>
+                                    <div class="ai-solution">
+                                        <h4 class="text-teal-300">neural AI Solution</h4>
+                                        <ul>
+                                            <li>AI learns and replicates your unique brand voice.</li>
+                                            <li>Generates platform-specific content in seconds.</li>
+                                            <li>Maintains a perfectly consistent tone and style.</li>
+                                            <li>Provides insights on what content resonates best.</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                             <div class="bg-zinc-900 p-6">
+                               <p class="text-center font-semibold"><span class="text-teal-300">Impact Snapshot:</span> Reduce content creation time by up to <span class="text-white">80%</span> and increase social media engagement by <span class="text-white">35%</span>.</p>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
 
